tests/negative/test_mac_non_eval.orb
mac foo () {
    ret ();
};

fnc main () () {};